--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format:check": "prettier --check --ignore-unknown .",
+        "format": "prettier --write --ignore-unknown ."
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^1.1.2",
+        "daisyui": "^4.12.10",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.45",
+        "tailwindcss": "^3.4.10",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.6"
     }
 }
